--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -5,7 +5,6 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  user-select: none; /*preventing from copying my web details */
 }
 html {
   scroll-behavior: smooth;
@@ -62,7 +61,7 @@ html {
   list-style: none;
   display: inline;
 }
-.navbar .menu li a {
+.navbar-text-item {
   color: black;
   font-size: 18px;
   font-weight: 500;
@@ -70,7 +69,7 @@ html {
   padding: 2px;
   transition: all 0.5s ease;
 }
-.navbar .menu li a:hover {
+.navbar-text-item.current {
   color: aliceblue;
   border-bottom: 3px solid aliceblue;
 }
