--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -2,14 +2,14 @@
 .form-container {
   margin-top: 20px;
   width: 70vw;
-  height: 380px;
+  height: 370px;
   border: 2px solid black;
   font-family: "Ubuntu", sans-serif;
   border-radius: 10px;
   background-image: linear-gradient(
     180deg,
     rgb(255, 255, 255),
-    rgb(219, 218, 218)
+    rgb(187, 184, 184)
   );
 }
 input,
@@ -17,23 +17,24 @@ textarea {
   background-color: #fff;
   border: 2px solid rgb(128, 127, 127);
   border-radius: 5px;
+  resize: none;
 }
 .title-container {
   width: 65vw;
   margin: 10px 2.5vw;
 }
-#title-id,
-#tag-id {
+.title-id,
+.tag-id {
   width: 65vw;
   margin: 10px 0px;
   line-height: 25px;
   padding: 10px;
 }
-#tag-id {
+.tag-id {
   display: block;
   width: 55vw;
 }
-#description-id {
+.description-id {
   width: 65vw;
   margin: 10px 0px;
   height: 95px;
@@ -54,26 +55,64 @@ textarea {
   color: #fff;
   border: 2px solid #fff;
 }
+.notes-container {
+  width: 70vw;
+  position: absolute;
+  margin-top: 10px;
+}
+.display-notes-container {
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 930px) {
+  .display-notes-container {
+    display: flex;
+    justify-content: space-around;
+  }
+}
+/* lets do responsiveness */
 @media screen and (max-width: 650px) {
-  .form-container {
+  .form-container,
+  .notes-container {
     width: 95vw;
   }
   .title-container {
     width: 90vw;
     margin: 10px 2.5vw;
   }
-  #title-id,
-  #tag-id {
+  .title-id,
+  .tag-id {
     width: 90vw;
   }
-  #tag-id {
+  .tag-id {
     display: block;
     width: 65vw;
   }
   #submit-id {
     margin-left: 75vw;
   }
-  #description-id {
+  .description-id {
     width: 90vw;
+  }
+}
+@media screen and (max-width: 330px) {
+  .form-container,
+  .notes-container {
+    width: 115vw;
+  }
+  .title-container {
+    width: 110vw;
+    margin: 10px 2.5vw;
+  }
+  .title-id {
+    width: 110vw;
+  }
+  .tag-id {
+    width: 80vw;
+  }
+  #submit-id {
+    margin-left: 90vw;
   }
 }
